cracker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cracker-deployment
  labels:
    app: cracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cracker
  template:
    metadata:
      labels:
        app: cracker
    spec:
      containers:
        - name: cracker
          image: mreider/cracker:1.0
