frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
          - name: frontend
            image: mreider/frontend:1.0
            ports:
            - containerPort: 15002
              name: containerport1
            - containerPort: 15003
              name: containerport2
