frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    run: frontend
spec:
  type: NodePort
  ports:
  - port: 15002
    name: rpc
    protocol: TCP
    nodePort: 30002
  - port: 15003
    name: http
    protocol: TCP
    nodePort: 30003
  selector:
    app: frontend
