lockbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lockbox-service
  labels:
    run: lockbox
spec:
  ports:
  - port: 15001
    protocol: TCP
  selector:
    app: lockbox
